# botsentencias

./: .env.example  README.md  pyproject.toml  requirements.txt
src/botsentencias/: __main__.py  cli.py  config.py  logging_utils.py  processing.py  rag.py  registry.py  scraper.py
