[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botsentencias"
version = "0.1.0"
description = "Agente RAG sobre fallos de la Corte Suprema Argentina"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
botsentencias = "botsentencias.cli:main"
